fix: fixing error where lines might get stuck for numbers ending with 1 in row count

--- a/src/components/json-line.module.scss
+++ b/src/components/json-line.module.scss
@@ -7,6 +7,7 @@
 
   &.bracket {
     color: #f2cab8;
+    font-weight: 700;
   }
 }
 
